Fixed multi-tenant routing issues and made sure validation errors return a 400